kube/sys-audit-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sys-audit-app
  labels:
    app: sys-audit-app
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: sys-audit-app
  selector:
    app: sys-audit-app
    tier: frontend
